<resources>
    <string name="app_name">SCT_AD_2</string>
    <string name="app_title">My To-Do List</string>
    <string name="app_subtitle">Stay organized, one task at a time</string>

    <string name="hint_enter_task">Enter a new task</string>
    <string name="btn_add_task">Add Task</string>
    <string name="label_your_tasks">Your Tasks</string>
    <string name="hint_long_press_delete">Long press to delete</string>

    <string name="empty_task_warning">Please enter a task before adding</string>
    <string name="task_added">Task added successfully</string>
    <string name="task_deleted">Deleted: %1$s</string>
</resources>
